--- a/src/Components/fake-api/package.json
+++ b/src/Components/fake-api/package.json
@@ -1,11 +1,11 @@
 {
   "name": "fake-api",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
-    "start": "json-server --watch db.json --port $PORT"
+    "start": "json-server --watch db.json --port $PORT --host 0.0.0.0"
   },
   "dependencies": {
-    "json-server": "^0.17.4",
-    "cors": "^2.8.5"
+    "json-server": "^0.17.3"
   }
 }
